//----------------------------------------------------------------------------------------

syntax = "proto3";

//----------------------------------------------------------------------------------------

import "Proto.proto";

option csharp_namespace = "Nirge.Core";

//----------------------------------------------------------------------------------------

message RpcCallArgsEmpty
{
}

message RpcCallReq
{
    int32 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    bytes Args = 4;
}

message RpcCallRsp
{
    int32 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    bytes Ret = 4;
}

message RpcCallExceptionRsp
{
    int32 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    int32 Exception = 4;
}

//----------------------------------------------------------------------------------------
